# query2sql

./: .env.example  .gitignore  main.py  pyproject.toml  schema.sql  start.sh
