[project]
name = "query2sql"
version = "0.1.0"
description = "A FastMCP service for natural language to SQL query generation and execution"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.5.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
]
